--- a/signIn-login/signIn-login.vcxproj
+++ b/signIn-login/signIn-login.vcxproj
@@ -136,6 +136,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DBmodule.hpp" />
+    <ClInclude Include="signinClass.hpp" />
     <ClInclude Include="test1.hpp" />
     <ClInclude Include="test2.hpp" />
   </ItemGroup>
