--- a/signIn-login/signIn-login.vcxproj.filters
+++ b/signIn-login/signIn-login.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClInclude Include="DBmodule.hpp">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="signinClass.hpp">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
