[feat] user_check 01
user_check 생성

--- a/chat-admin/chat-admin.vcxproj
+++ b/chat-admin/chat-admin.vcxproj
@@ -139,6 +139,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="chat_ban.hpp" />
+    <ClInclude Include="user_check.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
