--- a/chat/chat.vcxproj.filters
+++ b/chat/chat.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="chat_send.hpp">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="test.hpp">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
