--- a/chat-admin/chat-admin.vcxproj.filters
+++ b/chat-admin/chat-admin.vcxproj.filters
@@ -35,5 +35,8 @@
     <ClInclude Include="httplib.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="change_pw.hpp">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
