[fix] chat_room
chat_room class 주석 처리

--- a/chat/chat.vcxproj
+++ b/chat/chat.vcxproj
@@ -138,6 +138,7 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="chat_room.hpp" />
     <ClInclude Include="chat_send.hpp" />
     <ClInclude Include="test.hpp" />
   </ItemGroup>
