--- a/chat/chat.vcxproj
+++ b/chat/chat.vcxproj
@@ -138,7 +138,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="chat_send.hpp" />
-    <ClInclude Include="test.hpp" />
+    <ClInclude Include="chat_print.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
