--- a/chat-admin/chat-admin.vcxproj.filters
+++ b/chat-admin/chat-admin.vcxproj.filters
@@ -38,5 +38,8 @@
     <ClInclude Include="change_pw.hpp">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="json.hpp">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
