[fix]chat_print
test.hpp파일 삭제

--- a/chat/chat.vcxproj
+++ b/chat/chat.vcxproj
@@ -138,9 +138,9 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="chat_print.hpp" />
     <ClInclude Include="chat_room.hpp" />
     <ClInclude Include="chat_send.hpp" />
-    <ClInclude Include="test.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
