--- a/chat/chat.vcxproj.filters
+++ b/chat/chat.vcxproj.filters
@@ -15,21 +15,36 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="main1111.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="DB1111.hpp">
+      <Filter>헤더 파일</Filter>
+    </ClCompile>
     <ClCompile Include="main.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="DB.hpp">
-      <Filter>헤더 파일</Filter>
-    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="chat_send.hpp">
+    <ClInclude Include="chat_send1111.hpp">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="chat_room1111.hpp">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="chat_print1111.hpp">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="chat_print.hpp">
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="chat_room.hpp">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="chat_print.hpp">
+    <ClInclude Include="chat_send.hpp">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="DB.hpp">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
